--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Valentine's Challenge</title>
+    <title>For Safa ❤️</title>
     <style>
         :root {
             --bg: #1a0101;
@@ -18,41 +18,48 @@
             margin: 0; padding: 0;
             min-height: 100vh;
             display: flex; justify-content: center; align-items: center;
-            overflow: hidden; text-align: center;
+            overflow-x: hidden; text-align: center;
         }
 
         #canvas { position: fixed; top: 0; left: 0; pointer-events: none; z-index: 1; }
         .ui-wrapper { position: relative; z-index: 10; width: 90%; max-width: 450px; padding: 20px; }
         .gif-img, .final-img { width: 100%; max-width: 280px; border-radius: 20px; margin: 20px 0; border: 3px solid var(--gold); }
 
-        .btn-container { display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; margin-top: 20px; min-height: 120px; }
+        .btn-container { display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; margin-top: 20px; min-height: 100px; }
         
         button {
             background: var(--gold); color: black; border: none;
             padding: 12px 25px; border-radius: 50px; font-weight: bold;
-            cursor: pointer; transition: transform 0.2s ease; font-size: 1rem;
+            cursor: pointer; transition: transform 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275); font-size: 1rem;
         }
 
-        #no-btn, .move-btn { transition: all 0.2s ease; }
+        #no-btn { background: #444; color: white; }
 
         /* STAGES */
         #stage-2, #stage-zor, #stage-handak, #stage-final { display: none; }
         .kurdish-txt { font-size: 1.8rem; color: var(--gold); font-weight: bold; margin-bottom: 10px; }
         .final-txt { font-size: 2.2rem; color: var(--gold); font-weight: bold; margin-top: 15px; }
         #pew { position: absolute; top: -30px; width: 100%; color: var(--gold); font-weight: bold; display: none; }
+        
+        /* Hidden Audio */
+        #video-container { position: absolute; width: 0; height: 0; overflow: hidden; pointer-events: none; }
     </style>
 </head>
 <body>
 
 <canvas id="canvas"></canvas>
 
+<div id="video-container">
+    <div id="player"></div>
+</div>
+
 <div class="ui-wrapper">
     <div id="stage-1">
         <h1 style="font-size: 2.2rem;">AMNT XOSH DAWY 🥹</h1>
-        <div class="btn-container">
+        <div class="btn-container" style="position: relative;">
             <div id="pew">( pew )</div>
             <button id="yes-btn" onclick="startExperience()">YES</button>
-            <button id="no-btn" onmouseover="moveBtn(this)" onclick="shrinkNo()">NO</button>
+            <button id="no-btn" onclick="shrinkNo()">NO</button>
         </div>
     </div>
 
@@ -62,7 +69,7 @@
         <div class="btn-container">
             <button onclick="showZor()">Zor</button>
             <button onclick="showZor()">ZORRRRRR</button>
-            <button id="handak-btn" class="move-btn" onmouseover="moveBtn(this)" onclick="showHandak()">Handak</button>
+            <button onclick="showHandak()">Handak</button>
             <button onclick="showZor()">GALAK ZORRRRRR</button>
         </div>
     </div>
@@ -70,13 +77,13 @@
     <div id="stage-zor">
         <div class="kurdish-txt">Zor? Bas Zor? 😘</div>
         <img src="https://media0.giphy.com/media/v1.Y2lkPTZjMDliOTUyZm01cmxpbHJiNjJtMHh5YnlzZ3JoMW14Mnp6cjJ3MmhsbXVwYWd1byZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/ytu2GUYbvhz7zShGwS/giphy.gif" class="gif-img">
-        <br><button onclick="showFinal()" style="margin-top: 20px;">I mean... GALAK ZOR!</button>
+        <br><button onclick="showFinal()" style="margin-top: 20px;">GALAK ZOR!</button>
     </div>
 
     <div id="stage-handak">
         <div class="kurdish-txt">Handak?! 🤨</div>
         <img src="https://media1.giphy.com/media/v1.Y2lkPTZjMDliOTUyZnp4ejhib2JlaWV5MDN0b2IybzV0cm5uNHYxbnU0MDU3cjdpZ2p6diZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/fFa05KbZowXiEIyRse/giphy.gif" class="gif-img">
-        <br><button onclick="showFinal()" style="margin-top: 20px;">Chawa handak?! GALAK ZOR!</button>
+        <br><button onclick="showFinal()" style="margin-top: 20px;">GALAK ZOR!</button>
     </div>
 
     <div id="stage-final">
@@ -87,16 +94,23 @@
 </div>
 
 <script>
+    // YouTube API Integration for Background Music
+    var tag = document.createElement('script');
+    tag.src = "https://www.youtube.com/iframe_api";
+    var firstScriptTag = document.getElementsByTagName('script')[0];
+    firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+    var player;
+    function onYouTubeIframeAPIReady() {
+        player = new YT.Player('player', {
+            height: '0', width: '0',
+            videoId: 'm_W_7B4pIEM', // The music from the TikTok link
+            playerVars: { 'autoplay': 0, 'controls': 0, 'loop': 1, 'playlist': 'm_W_7B4pIEM' }
+        });
+    }
+
     let noScale = 1;
     let yesScale = 1;
-
-    function moveBtn(btn) {
-        const x = Math.random() * (window.innerWidth - btn.offsetWidth);
-        const y = Math.random() * (window.innerHeight - btn.offsetHeight);
-        btn.style.position = 'fixed';
-        btn.style.left = x + 'px';
-        btn.style.top = y + 'px';
-    }
 
     function shrinkNo() {
         noScale -= 0.15;
@@ -112,7 +126,7 @@
     }
 
     function startExperience() {
-        window.open('https://vt.tiktok.com/ZSmMV7pS4/', '_blank');
+        if (player && player.playVideo) { player.playVideo(); }
         document.getElementById('stage-1').style.display = 'none';
         document.getElementById('stage-2').style.display = 'block';
     }
@@ -135,7 +149,7 @@
         startHeavyHearts();
     }
 
-    // Canvas Background
+    // Animation Code
     const canvas = document.getElementById('canvas');
     const ctx = canvas.getContext('2d');
     let particles = [];
